Added registration link

--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ navigation_header:
 - title: Home
   url: /
 - title: Registration
-  url: /elements/
+  url: "https://forms.gle/96BmnWmLcfpM8WJHA"
 #- title: Blog
 #  url: /blog/
 #- title: Categories
