adjusted logo location

--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ defaults:
 encoding: utf-8 # Make sure the encoding is right
 lang: en-US # Set the site language
 title: "ISGEO-22" # Site name or title, also used in jekyll-seo-tag
-logo: "/ISGEO-22/assets/logos/IS-GEO.svg" # Site logo, also used in jekyll-seo-tag
+logo: "https://github.com/IS-GEO/ISGEO-22/blob/gh-pages/assets/logos/IS-GEO.svg" # Site logo, also used in jekyll-seo-tag
 description: "This workshop will provide methods that engage researchers across disciplines to explore how data and models can inform AI. Hands-on activities will support the development of conceptual models and participatory modeling implementation using data across applications in polar regions, hydrologic models, hazards planning, and climate change impacts on communities, as well as other topics salient to workshop participants. " # Site description and default description, also used in jekyll-seo-tag
 url: "/ISGEO-22/" # Site url, also used in jekyll-seo-tag
 baseurl: "https://is-geo.github.io/"
