--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,8 @@ navigation_header:
   url: /ISGEO-22/schedule/
 - title: Speakers
   url: /ISGEO-22/speakers/
+- title: Resources
+  url: /ISGEO-22/resources/
 #- title: Categories
 #  url: /categories/
 #- title: Search
