--- a/_config.yml
+++ b/_config.yml
@@ -154,14 +154,17 @@ navigation_footer:
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
   Twitter: https://twitter.com/IS_GEOCommunity
-  #LinkedIn: https://www.linkedin.com/in/daviddarnes
   GitHub: https://github.com/IS-GEO/
   link: https://is-geo.org/
   #RSS: /feed.xml
+  #LinkedIn: https://www.linkedin.com/in/daviddarnes
+  Youtube: https://www.youtube.com/channel/UCIKhb4vDFS_-yvjVmE5q5Nw
 
 sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
+  Linkedin: "#3B5998"
   Twitter: "#0d94e7"
-  #facebook: "#3B5998"
+  Facebook: "#3B5998"
+  Linkedin: "#3B5998"
   Email: true
 
 # Load custom fonts from fonts.google.com etc
