added teams link

--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,8 @@ navigation_header:
   url: "https://forms.gle/96BmnWmLcfpM8WJHA"
 - title: Schedule
   url: /ISGEO-22/schedule/
+- title: Project Teams
+  url: /ISGEO-22/teams/
 - title: Speakers
   url: /ISGEO-22/speakers/
 - title: Resources
