--- a/_config.yml
+++ b/_config.yml
@@ -133,8 +133,8 @@ favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
 navigation_header:
 - title: Home
   url: /ISGEO-22/
-- title: Registration
-  url: "https://forms.gle/96BmnWmLcfpM8WJHA"
+#- title: Registration
+#  url: "https://forms.gle/96BmnWmLcfpM8WJHA"
 - title: Schedule
   url: /ISGEO-22/schedule/
 - title: Project Teams
@@ -143,6 +143,8 @@ navigation_header:
   url: /ISGEO-22/speakers/
 - title: Resources
   url: /ISGEO-22/resources/
+- title: "[Presentation Uploads]"
+  url: https://forms.gle/t8w1Q9C3zCvaPJqY7
 #- title: Categories
 #  url: /categories/
 #- title: Search
