--- a/_config.yml
+++ b/_config.yml
@@ -143,8 +143,8 @@ navigation_header:
   url: /ISGEO-22/teams/
 - title: Resources
   url: /ISGEO-22/resources/
-- title: "&#128190; Presentation Uploads"
-  url: https://forms.gle/t8w1Q9C3zCvaPJqY7
+#- title: "&#128190; Presentation Uploads"
+#  url: https://forms.gle/t8w1Q9C3zCvaPJqY7
 #- title: Categories
 #  url: /categories/
 #- title: Search
